Feat: verify right answer

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
                 <input type="radio" name="cautraloi" class="cautraloi" id="d">
                 <label id="d_cautraloi" for="d"></label>
             </li>
+            <input type="hidden" id="caudung">
+            <input type="hidden" id="tongsocauhoi">
         </ul>
     </div>
     <button id="submit">Next question</button>
