--- a/index.html
+++ b/index.html
@@ -3,37 +3,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz</title>
 
-    <link rel="stylesheet" href="style.css">
+    <title>Quiz</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    <div class="question" id="question">
-        <h2 id="title"></h2>
-        <ul>
-            <li>
-                <input type="radio" name="cautraloi" class="cautraloi" id="a">
-                <label id="a_cautraloi" for="a"></label>
-            </li>
-            <li>
-                <input type="radio" name="cautraloi" class="cautraloi" id="b">
-                <label id="b_cautraloi" for="b"></label>
-            </li>
-            <li id="cau_c">
-                <input type="radio" name="cautraloi" class="cautraloi" id="c">
-                <label id="c_cautraloi" for="c"></label>
-            </li>
-            <li id="cau_d">
-                <input type="radio" name="cautraloi" class="cautraloi" id="d">
-                <label id="d_cautraloi" for="d"></label>
-            </li>
-            <input type="hidden" id="caudung">
-            <input type="hidden" id="tongsocauhoi">
-        </ul>
-        <button id="submit">Next question</button>
+    <div class="container">
+        <h2 class="tieude text-center text-uppercase my-4">Quiz for funn</h2>
+        <div class="question" id="question">
+            <h2 id="title" class="text-center"></h2>
+            <ul class="answer">
+                <li>
+                    <input type="radio" name="cautraloi" class="cautraloi" id="a">
+                    <label id="a_cautraloi" for="a"></label>
+                </li>
+                <li>
+                    <input type="radio" name="cautraloi" class="cautraloi" id="b">
+                    <label id="b_cautraloi" for="b"></label>
+                </li>
+                <li id="cau_c">
+                    <input type="radio" name="cautraloi" class="cautraloi" id="c">
+                    <label id="c_cautraloi" for="c"></label>
+                </li>
+                <li id="cau_d">
+                    <input type="radio" name="cautraloi" class="cautraloi" id="d">
+                    <label id="d_cautraloi" for="d"></label>
+                </li>
+                <input type="hidden" id="caudung">
+                <input type="hidden" id="tongsocauhoi">
+            </ul>
+            <button id="submit" class="btn btn-primary">Next question</button>
+        </div>
     </div>
     
 </body>
     <script type="text/javascript" src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </html>
